<resources>
    <string name="app_name">Task-app-1</string>
    <string name="head">Note cat</string>
    <string name="condition">In progress</string>
    <string name="created">Created</string>
    <string name="dateCreated">March 20, 2016</string>
    <string name="registered">Registered</string>
    <string name="dateRegistered">March 21, 2016</string>
    <string name="deadline">Deadline</string>
    <string name="dateDeadline">March 23, 2016</string>
    <string name="responsible">Responsible</string>
    <string name="person">You</string>
    <string name="task">You should play with your cat</string>
    <string name="back_button">back button</string>
    <string name="description_image">Image</string>
    <string-array name="links">
        <item>http://i.dailymail.co.uk/i/pix/2014/04/11/article-2602528-1D06B2D200000578-424_634x471.jpg</item>
        <item>http://memesvault.com/wp-content/uploads/Sad-Cat-Meme-04.jpg</item>
        <item>https://s-media-cache-ak0.pinimg.com/736x/bf/fd/0e/bffd0e24f35c7e61f0b8bc022b94a213.jpg</item>
        <item>http://raisinghappykittens.com/wp-content/uploads/2015/04/sad_cat.jpg</item>
        <item>http://www.she-kicks-she-throws.com/wp-content/uploads/sad-cat-fi-720x340.jpg</item>
        <item>http://vignette1.wikia.nocookie.net/steven-universe/images/8/8a/Sad-cat.jpg/revision/latest?cb=20150827161123</item>
    </string-array>
    <string name="title_activity_task">TaskActivity</string>
    <string name="task_date_0">18 квітня, 2016</string>
    <string name="task_date_1">27 березня, 2016</string>
    <string name="task_date_2">22 квітня, 2016</string>
    <string name="task_category_0">Питання демонтажу МАФ-ів</string>
    <string name="task_category_1">Питання нарахування боргу за електроенергію</string>
    <string name="task_category_2">Ремонт та обслуговування ліфтів</string>
    <string name="task_category_3">Прибирання та санітарний стан території</string>
    <string name="task_address">Вул. Вадима Гетьмана, 42</string>
    <string name="task_deadline_0">6 днів</string>
    <string name="task_deadline_1">Виконано</string>
    <string name="task_deadline_2">Очікує</string>
    <string name="task_description">Зробити щось по-людськи</string>
    <string name="like_count">54</string>

</resources>
