<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_main">

    <include layout="@layout/toolbar_layout"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:context=".MainActivity"
        android:fillViewport="true">

        <LinearLayout  android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusable="false">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:divider="@drawable/divider"
                android:showDividers="middle">

                <RelativeLayout style="@style/LayoutStyle">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/head"
                        android:textColor="@color/black"
                        android:textSize="@dimen/head_size"
                        android:id="@+id/textHead"
                        android:clickable="true"
                        android:onClick="onClickView"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />
                    <TextView
                        style="@style/MainFontStyle"
                        android:background="@drawable/back_rect"
                        android:text="@string/condition"
                        android:textColor="@color/white"
                        android:id="@+id/textCondition"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true" />


                </RelativeLayout>

                <RelativeLayout style="@style/LayoutStyle">

                    <TextView
                        style="@style/MainFontStyle"
                        android:text="@string/created"
                        android:textColor="@color/font_gray"
                        android:id="@+id/textCreated"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />

                    <TextView
                        style="@style/MainFontStyle"
                        android:text="@string/dateCreated"
                        android:id="@+id/textDateCreated"
                        android:textColor="@color/black"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentTop="true" />
                </RelativeLayout>

                <RelativeLayout style="@style/LayoutStyle">

                    <TextView
                        style="@style/MainFontStyle"
                        android:text="@string/registered"
                        android:textColor="@color/font_gray"
                        android:id="@+id/textRegistered"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />

                    <TextView
                        style="@style/MainFontStyle"
                        android:text="@string/dateRegistered"
                        android:id="@+id/textDateRegistered"
                        android:textColor="@color/black"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true" />
                </RelativeLayout>

                <RelativeLayout style="@style/LayoutStyle">

                    <TextView
                        style="@style/MainFontStyle"
                        android:text="@string/deadline"
                        android:textColor="@color/font_gray"
                        android:id="@+id/textDeadline"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />

                    <TextView
                        style="@style/MainFontStyle"
                        android:text="@string/dateDeadline"
                        android:id="@+id/textDateDeadline"
                        android:textColor="@color/black"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true" />
                </RelativeLayout>

                <RelativeLayout style="@style/LayoutStyle">

                    <TextView
                        style="@style/MainFontStyle"
                        android:text="@string/responsible"
                        android:textColor="@color/font_gray"
                        android:id="@+id/textResponsible"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />

                    <TextView
                        style="@style/MainFontStyle"
                        android:text="@string/person"
                        android:id="@+id/textPerson"
                        android:textColor="@color/black"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentEnd="true" />
                </RelativeLayout>

                <TextView
                    style="@style/MainFontStyle"
                    android:text="@string/task"
                    android:id="@+id/textTask"
                    android:textColor="@color/black"
                    android:padding="@dimen/padding_horizontal"
                    android:clickable="true"
                    android:onClick="onClickView"
                     />
            </LinearLayout>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/my_recycler_view"
                android:scrollbars="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_horizontal"
                android:paddingRight="@dimen/padding_horizontal"
                />

        </LinearLayout>
    </ScrollView>
</LinearLayout>